# n3x-discord-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manifest.json  n3x-bot.kvp  n3x-botconfig.json  n3x-botports.json  n3x-botupdates.json  requirements.txt  zztest.kvp  zztestupdates.json
.claude/agents/: architect.md  coder.md  grunty-reviewer.md  guide.md  reviewer.md  tdd.md
.claude/commands/: pipeline.md
deploy/amp/: README.md  n3x-bot.kvp  n3x-botconfig.json  n3x-botupdates.json
docs/architecture/: achievements-pass-b.md  achievements-pass-c.md  activity-tracking.md  admin-crud.md  base-timers.md  content-texts.md  gate-embed-persistence.md  gate-verlauf.md  gates-ezk.md  kodex.md  legacy-migration.md  nick-enforcement.md  runtime-config-phase1.md  runtime-config-phase2.md  welcome-cards.md
docs/superpowers/plans/: 2026-07-05-n3x-bot-storage-redesign.md  2026-07-05-n3x-bot-v2-feature-port.md
n3x-bot/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
n3x-bot/docs/: amp-content-management.md  v3-feature-catalog.md
n3x-bot/docs/architecture/: achievement-editor-phase-2b.md  achievements-pass-a.md  data-migration.md  delta-gate-and-records.md  editable-achievement-colors.md  gate-drop-reaction-flow.md  gate-message-delete-delay.md  phase-2a-achievement-defs.md  phase2-gate-slash-commands.md  phase3-config-content-slash-groups.md  phase6-dynamic-slash-counters.md  phase7-slash-only-finalization.md  slash-migration-phase-1.md
n3x-bot/docs/superpowers/plans/: 2026-07-05-n3x-bot-storage-redesign.md
n3x-bot/docs/superpowers/specs/: 2026-07-05-n3x-bot-storage-redesign-design.md
n3x-bot/n3x_bot/: __main__.py  achievement_commands.py  achievement_defs.py  achievements.py  activity.py  admin.py  bot.py  cards.py  charts.py  colors.py  config.py  config_commands.py  content.py  content_commands.py  events.py  format.py  gatelog.py  gates.py  history_backfill.py  kodex.py  legacy_migrate.py  migrate.py  models.py  mystats.py  nicknames.py  runtime_config.py  seed.py  singleton.py  timers.py  welcome.py
n3x-bot/n3x_bot/storage/: base.py  factory.py  json_repo.py  schema.py  sql_repo.py
n3x-bot/tests/: _seed.py  conftest.py  test_achievement_announce.py  test_achievement_commands.py  test_achievement_defs.py  test_achievement_sync.py  test_achievements.py  test_activity.py  test_admin_commands.py  test_bot_wiring.py  test_cards.py  test_chart_tz.py  test_color_config_commands.py  test_colors.py  test_command_list.py  test_commands.py  test_config.py  test_config_commands.py  test_content_texts.py  test_delta_gate.py  test_events.py  test_ezk_gates.py  test_gate_backfill.py  test_gate_drop_reactions.py  test_gate_embed_persistence.py  test_gate_input_autodelete.py  test_gate_input_help.py  test_gate_pending_persistence.py  test_gate_verlauf.py  test_gatelog.py  test_gates.py  test_history_backfill.py  test_kodex.py  test_legacy_migrate.py  test_live_gate_charts.py  test_main.py  test_migrate.py  test_mystats.py  test_nicknames.py  test_overview.py  (+13 more)
n3x-bot/tests/storage/: conftest.py  test_achievement_defs_contract.py  test_achievements_export_import_contract.py  test_achievements_repository_contract.py  test_activity_export_import_contract.py  test_activity_repository_contract.py  test_base_timers_repository_contract.py  test_channel_messages_contract.py  test_color_config_contract.py  test_content_texts_contract.py  test_export_import_contract.py  test_factory.py  test_gate_drops_contract.py  test_gate_entries_contract.py  test_gate_pending_contract.py  test_gate_records_contract.py  test_kodex_repository_contract.py  test_repository_contract.py  test_runtime_config_contract.py
n3x_bot/: __main__.py  bot.py  config.py  gates.py  models.py  seed.py
n3x_bot/storage/: base.py  json_repo.py  schema.py  sql_repo.py
tests/: test_bot_wiring.py  test_config.py  test_format.py  test_render.py  test_seed.py  test_smoke.py
tests/storage/: conftest.py  test_repository_contract.py
