[project]
name = "n3x-bot"
version = "0.1.0"
description = "N3X Discord bot with pluggable CRUD storage"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "pillow>=10.0",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.22",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# -n auto parallelises across cores (pytest-xdist); combined with the
# asyncio.sleep no-op in tests/conftest.py this takes the full suite from ~75s
# to ~15s. Override with `-n0` for a serial run (e.g. debugging / pdb).
addopts = "-q -n auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Pragmatic set: pyflakes (unused imports/vars), pycodestyle errors/warnings,
# and flake8-bugbear (likely-bug patterns). Import sorting / pyupgrade are left
# off to avoid churn on the existing hand-formatted style. E501 (line length)
# is disabled — the code targets ~79–100 cols by hand; a handful of long
# string literals aren't worth reflowing.
select = ["F", "E", "W", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally build throwaway names and re-import lazily.
"tests/**" = ["E741"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["n3x_bot"]
# Bundled render assets are loaded at runtime via importlib.resources; force
# their inclusion so the wheel ships them regardless of VCS-tracking state
# (otherwise cards.py raises FileNotFoundError under the Docker/AMP image).
force-include = { "n3x_bot/assets/card_bg.webp" = "n3x_bot/assets/card_bg.webp", "n3x_bot/assets/DejaVuSans-Bold.ttf" = "n3x_bot/assets/DejaVuSans-Bold.ttf", "n3x_bot/assets/welcome_bg.jpg" = "n3x_bot/assets/welcome_bg.jpg" }
